adding java options to installer. fixing workflow trigger